# UBB

.github/workflows/: django2.yml  django3.yml  django5.yml
sem1/Computer Science Athitecture/: capcoada.asm  examenpractic.asm  func12.asm  lab12.asm  lab8ex2.asm  minimmaxim.asm  practica.asm  practica3.asm  sirsecond.asm
sem1/FP/a11-912-Dragos-RazvanGeorge/: repository.py  sevice.py  tests.py  ui.py
sem1/FP/e912-912-Dragos-RazvanGeorge/: domain.py  main.py  repository.py  service.py  test1.py
sem2/DSA/dsa-lab1/: Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  CMakeLists.txt  ExtendedTest.cpp
sem2/DSA/dsa-lab2/: CMakeLists.txt  ExtendedTest.cpp  ListIterator.cpp  ListIterator.h  ShortTest.cpp  SortedIteratedList.cpp  SortedIteratedList.h
sem2/DSA/dsa-lab3/: CMakeLists.txt  ExtendedTest.cpp  SMIterator.cpp  SMIterator.h  ShortTest.cpp  SortedMap.cpp  SortedMap.h
sem2/ExamPrep/: Answear.cpp  CMakeLists.txt  Question.h  main.cpp  observer.h  usergui.h  usergui.ui
sem2/OOP/ExamPrep/: Answear.h  Question.cpp  Service.cpp  Service.h  observer.cpp  usergui.cpp
sem2/OOP/ExamPrep2/: CMakeLists.txt  Domain.cpp  Domain.h  Observer.cpp  Observer.h  Service.cpp  Service.h  guiunu.cpp  guiunu.h  guiunu.ui  main.cpp
sem2/OOP/ExamPrep3/: CMakeLists.txt  Domain.cpp  Domain.h  Observer.cpp  Observer.h  Service.cpp  Service.h  guiu.cpp  guiu.h  (+2 more)
sem3/frontendSdiCars/: package-lock.json
sem3/lab1/: README.md  model.txt
sem5/Mobile/: add_page.dart  car_database.dart  car_entity.dart  car_repository.dart  car_widget.dart  main.dart  pubspec.yaml  update_cars.dart
(+185 files in other folders)
